Fix layout: Proper sidebar grid layout, fix admin hub full-width, prevent auto-render switching

--- a/index.html
+++ b/index.html
@@ -820,25 +820,24 @@
             </aside>
 
             <!-- Academic Affairs Nav (Hidden by default) -->
-            <aside class="sidebar unit-nav hidden" id="nav-academic" style="min-width: 260px; width: 260px; display: none !important;">
-                <div class="brand" style="padding: 1rem; border-bottom: 2px solid #f0f0f0; font-size: 1.1rem; font-weight: 700;">Academic Affairs</div>
-                <ul class="nav-menu" style="display: flex; flex-direction: column; list-style: none; padding: 0.5rem; margin: 0;">
-                    <li class="nav-item" style="width: 100%; display: block; margin-bottom: 0;">
-                        <a href="#" class="nav-link" data-view="academic-overview" style="display: flex; width: 100%; padding: 0.75rem 1rem; text-decoration: none; color: #333;">
-                            <span class="nav-icon" style="margin-right: 0.75rem; font-size: 1.1rem;">🧭</span> Program Overview
+            <aside class="sidebar unit-nav hidden" id="nav-academic">
+                <div class="brand" style="padding: 1rem; border-bottom: 2px solid #f0f0f0; font-size: 1.1rem; font-weight: 700; color: #333;">Academic Affairs</div>
+                <ul class="nav-menu" style="display: flex !important; flex-direction: column !important; list-style: none; padding: 0.5rem; margin: 0; gap: 0;">
+                    <li class="nav-item" style="width: 100%; display: block; margin-bottom: 0; list-style: none;">
+                        <a href="#" class="nav-link" data-view="academic-overview" style="display: flex !important; width: 100%; padding: 0.75rem 1rem; text-decoration: none; color: #333; align-items: center; border: none; border-left: 4px solid transparent;">
+                            <span class="nav-icon" style="margin-right: 0.75rem; font-size: 1.1rem; flex-shrink: 0;">🧭</span> Program Overview
                         </a>
                     </li>
-                    <li class="nav-item" style="width: 100%; display: block; margin-bottom: 0;">
-                        <a href="#" class="nav-link" data-view="dept-practice" style="display: flex; width: 100%; padding: 0.75rem 1rem; text-decoration: none; color: #333;">
-                            <span class="nav-icon" style="margin-right: 0.75rem; font-size: 1.1rem;">💊</span> Pharmacy Practice
+                    <li class="nav-item" style="width: 100%; display: block; margin-bottom: 0; list-style: none;">
+                        <a href="#" class="nav-link" data-view="dept-practice" style="display: flex !important; width: 100%; padding: 0.75rem 1rem; text-decoration: none; color: #333; align-items: center; border: none; border-left: 4px solid transparent;">
+                            <span class="nav-icon" style="margin-right: 0.75rem; font-size: 1.1rem; flex-shrink: 0;">💊</span> Pharmacy Practice
                         </a>
                     </li>
-                    <li class="nav-item" style="width:100%; display: block; margin-bottom: 0;">
-                        <a href="#" class="nav-link" data-view="dept-science" style="display: flex; width: 100%; padding: 0.75rem 1rem; text-decoration: none; color: #333;">
-                            <span class="nav-icon" style="margin-right: 0.75rem; font-size: 1.1rem;">🔬</span> Pharm. Sciences
+                    <li class="nav-item" style="width: 100%; display: block; margin-bottom: 0; list-style: none;">
+                        <a href="#" class="nav-link" data-view="dept-science" style="display: flex !important; width: 100%; padding: 0.75rem 1rem; text-decoration: none; color: #333; align-items: center; border: none; border-left: 4px solid transparent;">
+                            <span class="nav-icon" style="margin-right: 0.75rem; font-size: 1.1rem; flex-shrink: 0;">🔬</span> Pharm. Sciences
                         </a>
                     </li>
-
                 </ul>
             </aside>
 
