--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KSAU-HS Clinical Affairs Dashboard</title>
+    <!-- Cache busting timestamp: __CACHE_BUSTER_20260207_185000__ -->
     <!-- Google Fonts: Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?v=20260207180">
-    <link rel="stylesheet" href="css/student-portal.css?v=1">
+    <link rel="stylesheet" href="css/style.css?v=20260207185000">
+    <link rel="stylesheet" href="css/student-portal.css?v=20260207185000">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* ============================================
@@ -1131,9 +1132,9 @@
     <script src="js/alumni-data.js?v=20260120019" onerror="console.error('Failed to load: alumni-data.js')"></script>
     <script src="js/research-data.js?v=20260120019" onerror="console.error('Failed to load: research-data.js')"></script>
     <script src="js/appe-hub_backup_20260119_220628.js?v=20260124001" onerror="console.error('Failed to load: appe-hub backup')"></script>
-    <script src="js/admin-hub-model.js?v=20260207180" onerror="console.error('Failed to load: admin-hub-model.js')"></script>
-    <script src="js/app.js?v=20260207180" onerror="console.error('Failed to load: app.js')"></script>
-    <script src="js/student-portal.js?v=20260207180" onerror="console.error('Failed to load: student-portal.js v2')"></script>
+    <script src="js/admin-hub-model.js?v=20260207185000" onerror="console.error('Failed to load: admin-hub-model.js')"></script>
+    <script src="js/app.js?v=20260207185000" onerror="console.error('Failed to load: app.js')"></script>
+    <script src="js/student-portal.js?v=20260207185000" onerror="console.error('Failed to load: student-portal.js v2')"></script>
     <script src="js/program-switcher.js?v=1" onerror="console.error('Failed to load: program-switcher.js')"></script>
     <script src="js/outcomes-dashboard.js?v=1" onerror="console.error('Failed to load: outcomes-dashboard.js')"></script>
     <script src="js/evaluation-system.js?v=1" onerror="console.error('Failed to load: evaluation-system.js')"></script>
